# OpenSR

./: .gitignore  CMakeLists.txt  Doxyfile  OpenSR-World.pot  OpenSR.kdev4  OpenSR.pot  README.md  TODO  astyle.sh  opensrrc  startup.lua
Engine/: .gitignore  AFTFont.cpp  Action.cpp  AnimatedSprite.cpp  AnimatedTexture.cpp  Button.cpp  CMakeLists.txt  CheckBox.cpp  ColorLabel.cpp  DATTranslator.cpp  Engine.cpp  FSAdapter.cpp  FTFont.cpp  Font.cpp  GAIAnimatedImage.cpp  GAISprite.cpp  GAITexture.cpp  JSONHelper.cpp  Label.cpp  LabelWidget.cpp  LineEdit.cpp  Log.cpp  MPG123MusicDecoder.cpp  MPG123MusicDecoder.h  Music.cpp  NinePatch.cpp  Node.cpp  Object.cpp  PlanetDrawer.cpp  Plugin.cpp  PythonBindings.cpp  QMLHelper.cpp  QMLPlugin.cpp  QMLPlugin.h  QMLQuestPlayer.cpp  QMLTypesExport.cpp  RPKGAdapter.cpp  RadioButton.cpp  ResourceManager.cpp  ResourceManager_p.h  (+23 more)
ImagePlugin/: .gitignore  CMakeLists.txt  GAIAnimationIO.cpp  GAIAnimationIO.h  GIImageIO.cpp  GIImageIO.h  HAIAnimationIO.cpp  HAIAnimationIO.h  PSDImageIO.cpp  PSDImageIO.h  QtOpenSRImagePlugin.cpp  QtOpenSRImagePlugin.h  QtOpenSRImagePlugin.json
QM/: .gitignore  CMakeLists.txt  Parser.cpp  QM.cpp  QuestPlayer.cpp
Ranger/: .gitignore  AFT.cpp  CMakeLists.txt  DAT.cpp  FSUtils.cpp  GAILoader.cpp  GILoader.cpp  HAILoader.cpp  JPEG.cpp  PKG.cpp  PNG.cpp  PSDLoader.cpp  RPKG.cpp  TextUtils.cpp  ZLib.cpp
Ranger/tests/: TextUtilsTest.cpp
World/: .gitignore  Artefact.cpp  Artefact.h  Asteroid.cpp  Asteroid.h  CMakeLists.txt  CargoHook.cpp  CargoHook.h  Container.cpp  Container.h  DefenceGenerator.cpp  DefenceGenerator.h  DesertPlanet.cpp  DesertPlanet.h  Droid.cpp  Droid.h  Engine.cpp  Engine.h  Equipment.cpp  Equipment.h  GameInterface.cpp  Goods.cpp  Goods.h  Hull.cpp  Hull.h  InfoWidget.cpp  InfoWidgetProvider.cpp  InhabitedPlanet.cpp  InhabitedPlanet.h  InteractionContext.cpp  InteractionWidget.cpp  Item.cpp  Item.h  MannedObject.cpp  MannedObject.h  Micromodulus.cpp  Micromodulus.h  Planet.cpp  Planet.h  PlanetManager.cpp  (+47 more)
include/OpenSR/: AFTFont.h  Action.h  AnimatedSprite.h  AnimatedTexture.h  Button.h  CMakeLists.txt  CheckBox.h  ColorLabel.h  ConsoleWidget.h  DATTranslator.h  Engine.h  FSAdapter.h  FTFont.h  Font.h  GAIAnimatedImage.h  GAISprite.h  GAITexture.h  JSONHelper.h  Label.h  LineEdit.h  LineEditWidget.h  Log.h  LuaBindings.h  LuaWidget.h  Music.h  MusicDecoder.h  NinePatch.h  Node.h  Object.h  OpenSR.h  PlanetDrawer.h  Plugin.h  PluginInterface.h  PythonBindings.h  QM.h  QMLHelper.h  QMLQuestPlayer.h  RPKGAdapter.h  RadioButton.h  RadioButtonGroup.h  (+28 more)
libRanger/: CMakeLists.txt  FSUtils.cpp  GAILoader.cpp  GILoader.cpp  HAILoader.cpp  IOStreams.cpp  LZMA.cpp  PKG.cpp  PNG.cpp  RPKG.cpp  TextUtils.cpp  ZLib.cpp  libRanger.h
libRanger/lua/: libRanger.pkg
libRanger/tests/: CMakeLists.txt
obsolete/Engine/: AFTFont.cpp  AnimatedSprite.cpp  AnimatedTexture.cpp  CMakeLists.txt  ConsoleWidget.cpp  FTFont.cpp  Font.cpp  GAISprite.cpp  LabelWidget.cpp  LineEdit.cpp  NinePatch.cpp  Object.cpp  RPKGAdapter.cpp  RadioButton.cpp  RadioButtonGroup.cpp  ResourceAdapter.cpp  ScrollArea.cpp  ShaderProgram.cpp  Sprite.cpp  Styles.cpp  TiledBeizerCurve.cpp  TiledBezierCurve.cpp  WidgetNode.cpp
python/: Action.cpp  ActionListener.cpp  AnimatedSprite.cpp  Button.cpp  CMakeLists.txt  CheckBox.cpp  ColorLabel.cpp  Engine.cpp  Font.cpp  GAISprite.cpp  Label.cpp  LineEdit.cpp  LineEditWidget.cpp  NinePatch.cpp  Node.cpp  Object.cpp  ObjectWrap.h  PythonBindings.cpp  RadioButton.cpp  RadioButtonGroup.cpp  ResourceManager.cpp  ScriptWidget.cpp  ScrollArea.cpp  ShaderProgram.cpp  SoundManager.cpp  Sprite.cpp  Styles.cpp  Texture.cpp  TiledLine.cpp  Widget.cpp  WidgetNode.cpp  WidgetWrap.h  Wrappers.h
python/OpenSR/: CMakeLists.txt
src/: Action.cpp  Action.h  ActionListener.h  AnimatedSprite.cpp  AnimatedSprite.h  AnimatedTexture.cpp  AnimatedTexture.h  Button.cpp  Button.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  ColorLabel.cpp  ColorLabel.h  ConsoleWidget.cpp  ConsoleWidget.h  Engine.cpp  Engine.h  FSAdapter.cpp  FSAdapter.h  Font.cpp  Font.h  GAISprite.cpp  GAISprite.h  GameInterface.h  JSONHelper.cpp  JSONHelper.h  Label.cpp  Label.h  LineEdit.cpp  LineEditWidget.cpp  LineEditWidget.h  Log.cpp  Log.h  LuaBindings.cpp  LuaBindings.h  LuaWidget.cpp  LuaWidget.h  NinePatch.cpp  NinePatch.h  (+44 more)
src/lua/: Action.pkg  ActionListener.pkg  AnimatedSprite.pkg  AnimatedTexture.pkg  Button.pkg  CheckBox.pkg  Engine.pkg  GAISprite.pkg  LuaBindings.pkg  LuaWidget.pkg  NinePatch.pkg  Node.pkg  Object.pkg  ResourceManager.pkg  ScrollArea.pkg  Sprite.pkg  Styles.pkg  Texture.pkg  Types.pkg  Widget.pkg  WidgetNode.pkg  libRanger.pkg
src/world/: Artifact.cpp  Artifact.h  Asteroid.cpp  Asteroid.h  CMakeLists.txt  CargoHook.cpp  CargoHook.h  DefenceGenerator.cpp  DefenceGenerator.h  DesertPlanet.cpp  DesertPlanet.h  Droid.cpp  Droid.h  Engine.cpp  Engine.h  Equipment.cpp  Equipment.h  GameInterface.cpp  Goods.cpp  Goods.h  HabitablePlanet.cpp  HabitablePlanet.h  Hull.cpp  Hull.h  InfoWidget.cpp  InfoWidget.h  InteractionContext.cpp  InteractionContext.h  Item.cpp  Item.h  LandContext.cpp  LandContext.h  Meteor.cpp  Meteor.h  Micromodulus.cpp  Micromodulus.h  Planet.cpp  Planet.h  PlanetManager.cpp  PlanetManager.h  (+51 more)
tools/: .gitignore  CMakeLists.txt  convertResources.sh
tools/DATTools/: CMakeLists.txt  convert.cpp  crc32.cpp  crypt.cpp  crypt.h  json.cpp  main.cpp
tools/NinePatchEditor/: BackgroundItem.cpp  BackgroundItem.h  CMakeLists.txt  EditorView.cpp  EditorView.h  EditorWindow.cpp  EditorWindow.h  EditorWindow.ui  NinePatchItem.cpp  NinePatchItem.h  PatchItem.cpp  PatchItem.h  main.cpp
tools/PlanetViewer/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  PlanetModel.cpp  PlanetModel.h  PlanetViewer.cpp  PlanetViewer.h  PlanetViewer.qml  PlanetViewer.qrc  main.cpp  planetFragmentShader.frag  resources.qrc
tools/QtImageFormatsPlugin/: CMakeLists.txt  GAIAnimationIO.cpp  GAIAnimationIO.h  GAILoader.cpp  GIImageIO.cpp  GIImageIO.h  GILoader.cpp  HAIAnimationIO.cpp  HAIAnimationIO.h  HAILoader.cpp  Types.h  (+2 more)
(+414 files in other folders)
