PROJECT(OpenSR)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake/Modules)

FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(Boost COMPONENTS thread system REQUIRED)
FIND_PACKAGE(Freetype REQUIRED)
FIND_PACKAGE(Iconv REQUIRED)
FIND_PACKAGE(Lua51 REQUIRED)
FIND_PACKAGE(Luabind REQUIRED)
FIND_PACKAGE(JsonCpp REQUIRED)
FIND_PACKAGE(Libintl REQUIRED)
FIND_PACKAGE(SDL_mixer REQUIRED)

SET(MAJOR_VERSION 0)
SET(MINOR_VERSION 1)
SET(BUILD_VERSION 1)
SET(API_VERSION 1)

# Disable auto-linking boost
ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB)

IF(WIN32)
    FIND_PACKAGE(GLEW REQUIRED)
# At least Windows 2000 is required
    ADD_DEFINITIONS(-D_WIN32_WINNT=0x0500 -DUNICODE)
ENDIF(WIN32)

IF(ICONV_SECOND_ARGUMENT_IS_CONST)
    ADD_DEFINITIONS(-DICONV_SECOND_ARGUMENT_IS_CONST)
ENDIF(ICONV_SECOND_ARGUMENT_IS_CONST)

ADD_SUBDIRECTORY(libRanger)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tools)