PROJECT(OpenSR)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake/Modules)

FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(SDL2 REQUIRED)
FIND_PACKAGE(SDL2_mixer REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(Boost COMPONENTS thread system python3 REQUIRED)
FIND_PACKAGE(Freetype REQUIRED)
FIND_PACKAGE(Iconv REQUIRED)
FIND_PACKAGE(JsonCpp REQUIRED)
FIND_PACKAGE(Libintl REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)

IF(BUILD_TESTS)
    ENABLE_TESTING()
ENDIF(BUILD_TESTS)

SET(MAJOR_VERSION 0)
SET(MINOR_VERSION 1)
SET(BUILD_VERSION 1)
SET(API_VERSION 1)

# Disable auto-linking boost
ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB)

IF(Boost_USE_DEBUG_PYTHON)
    ADD_DEFINITIONS(-DBOOST_DEBUG_PYTHON)
ENDIF(Boost_USE_DEBUG_PYTHON)

IF(WIN32)
    FIND_PACKAGE(GLEW REQUIRED)
# At least Windows 2000 is required
    ADD_DEFINITIONS(-DNOMINMAX -D_WIN32_WINNT=0x0500 -DUNICODE)
ENDIF(WIN32)

ADD_DEFINITIONS(-D_USE_MATH_DEFINES)

IF(ICONV_SECOND_ARGUMENT_IS_CONST)
    ADD_DEFINITIONS(-DICONV_SECOND_ARGUMENT_IS_CONST)
ENDIF(ICONV_SECOND_ARGUMENT_IS_CONST)

OPTION(BUILD_RESOURCE_VIEWER "Build Resource Viewer tool" NO)
OPTION(BUILD_RESOURCE_CONVERTER "Build Resource Converter tool" NO)
OPTION(BUILD_NINEPATCH_EDITOR "Build Ninepatch Editor tool" NO)
OPTION(BUILD_WORLD_UTILS "Build World Utils tool" NO)
OPTION(BUILD_PLANET_VIEWER "Build Planet Viewer tool" NO)

ADD_SUBDIRECTORY(Ranger)
ADD_SUBDIRECTORY(Engine)
ADD_SUBDIRECTORY(World)
ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(python)
