PROJECT(OpenSR)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(MAJOR_VERSION 0)
SET(MINOR_VERSION 1)
SET(BUILD_VERSION 1)
SET(API_VERSION 1)

FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)

# Enable C++11 support.
ADD_DEFINITIONS(-std=c++11)

# Enable automoc
SET(CMAKE_AUTOMOC ON)

#OPTION(BUILD_RESOURCE_VIEWER "Build Resource Viewer tool" NO)
#OPTION(BUILD_RESOURCE_CONVERTER "Build Resource Converter tool" NO)
#OPTION(BUILD_NINEPATCH_EDITOR "Build Ninepatch Editor tool" NO)
#OPTION(BUILD_WORLD_UTILS "Build World Utils tool" NO)
#OPTION(BUILD_PLANET_VIEWER "Build Planet Viewer tool" NO)
#OPTION(BUILD_QUEST_PLAYER "Build Quest Player tool" NO)
#OPTION(BUILD_DAT_TOOLS "Build tools for DAT files" NO)

ADD_SUBDIRECTORY(Ranger)
ADD_SUBDIRECTORY(ImagePlugin)
#ADD_SUBDIRECTORY(QM)
ADD_SUBDIRECTORY(Engine)
#ADD_SUBDIRECTORY(World)
#ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(tools)
#ADD_SUBDIRECTORY(python)
