SET(QM_SOURCES
    QM.cpp
    Parser.cpp
)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/include/
    ${CMAKE_BINARY_DIR}/include/
    ${ICONV_INCLUDE_DIR}
)

ADD_LIBRARY(qm SHARED ${QM_SOURCES})
TARGET_LINK_LIBRARIES(qm ${ICONV_LIBRARIES})
SET_TARGET_PROPERTIES(qm PROPERTIES COMPILE_FLAGS "-DQM_LIBRARY") 

INSTALL(TARGETS qm LIBRARY DESTINATION lib ARCHIVE DESTINATION lib RUNTIME DESTINATION bin)
