SET(QM_SOURCES
    QM.cpp
    Parser.cpp
    QuestPlayer.cpp
)

SET(QM_HEADERS
    ${CMAKE_SOURCE_DIR}/include/OpenSR/QM/QuestPlayer.h
)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/include
    ${Qt5Core_INCLUDE_DIRS}
)

QT5_WRAP_CPP(QM_MOC_SOURCES ${QM_HEADERS})
ADD_LIBRARY(QM SHARED ${QM_SOURCES} ${QM_MOC_SOURCES})
SET_TARGET_PROPERTIES(QM PROPERTIES COMPILE_DEFINITIONS "QM_LIBRARY_BUILD")

IF(WIN32)
    SET_TARGET_PROPERTIES(QM PROPERTIES PREFIX "")
ENDIF()

TARGET_LINK_LIBRARIES(QM Qt5::Core)
