SET(RANGER_QT_SOURCES
    GAILoader.cpp
    GILoader.cpp
    HAILoader.cpp
    PKG.cpp
    ZLib.cpp
    DAT.cpp
)

SET(RANGER_QT_HEADERS
    ${CMAKE_SOURCE_DIR}/include/OpenSR/libRangerQt.h
)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/include
    ${Qt5Gui_INCLUDE_DIRS}
    ${Qt5Core_INCLUDE_DIRS}
)

QT5_WRAP_CPP(RANGER_QT_MOC_SOURCES ${RANGER_QT_HEADERS})

ADD_LIBRARY(RangerQt SHARED ${RANGER_QT_SOURCES} ${RANGER_QT_MOC_SOURCES})
SET_TARGET_PROPERTIES(RangerQt PROPERTIES COMPILE_DEFINITIONS "LIBRANGER_LIBRARY")

IF(WIN32)
    SET_TARGET_PROPERTIES(RangerQt PROPERTIES PREFIX "")
ENDIF()

TARGET_LINK_LIBRARIES(RangerQt Qt5::Core Qt5::Gui)
