SET(LIBRANGERS_SOURCES
    GILoader.cpp
    GAILoader.cpp
    HAILoader.cpp
    ZLib.cpp
    PKG.cpp
    RPKG.cpp
    TextUtils.cpp
)

SET(LIBRANGERS_HEADERS
    libRanger.h
)

FIND_PACKAGE(ZLIB REQUIRED)

INCLUDE_DIRECTORIES(
    ${ZLIB_INCLUDE_DIRS}
    ${ICONV_INCLUDE_DIR}
)

ADD_LIBRARY(ranger ${LIBRANGERS_SOURCES} ${LIBRANGERS_HEADERS})
TARGET_LINK_LIBRARIES(ranger ${ZLIB_LIBRARIES}  ${ICONV_LIBRARIES})