FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(PNG REQUIRED)

SET(LIBRANGERS_SOURCES
    GILoader.cpp
    GAILoader.cpp
    HAILoader.cpp
    ZLib.cpp
    PKG.cpp
    RPKG.cpp
    TextUtils.cpp
    FSUtils.cpp
    PNG.cpp
)

SET(LIBRANGERS_HEADERS
    libRanger.h
)

INCLUDE_DIRECTORIES(
    ${ZLIB_INCLUDE_DIRS}
    ${ICONV_INCLUDE_DIR}
    ${PNG_INCLUDE_DIRS}
)

ADD_DEFINITIONS(${PNG_DEFINITIONS})

ADD_LIBRARY(ranger SHARED ${LIBRANGERS_SOURCES} ${LIBRANGERS_HEADERS})
TARGET_LINK_LIBRARIES(ranger ${ZLIB_LIBRARIES} ${PNG_LIBRARIES} ${ICONV_LIBRARIES})

INSTALL(TARGETS ranger LIBRARY DESTINATION lib)
INSTALL(FILES ${LIBRANGERS_HEADERS} DESTINATION include)