FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(PNG REQUIRED)
FIND_PACKAGE(LZMA REQUIRED)
FIND_PACKAGE(Boost COMPONENTS iostreams REQUIRED)

SET(LIBRANGERS_SOURCES
    GILoader.cpp
    GAILoader.cpp
    HAILoader.cpp
    ZLib.cpp
    PKG.cpp
    RPKG.cpp
    TextUtils.cpp
    FSUtils.cpp
    PNG.cpp
    LZMA.cpp
    IOStreams.cpp
)

SET(LIBRANGERS_HEADERS
    libRanger.h
)

INCLUDE_DIRECTORIES(
    ${ZLIB_INCLUDE_DIRS}
    ${ICONV_INCLUDE_DIR}
    ${PNG_INCLUDE_DIRS}
    ${LZMA_INCLUDE_DIRS}
    ${Boost_INCLUDE_DIRS}
)

ADD_DEFINITIONS(${PNG_DEFINITIONS})

ADD_LIBRARY(ranger SHARED ${LIBRANGERS_SOURCES} ${LIBRANGERS_HEADERS})
TARGET_LINK_LIBRARIES(ranger ${ZLIB_LIBRARIES} ${PNG_LIBRARIES} ${ICONV_LIBRARIES} ${LZMA_LIBRARIES} ${Boost_IOSTREAM_LIBRARY})
SET_TARGET_PROPERTIES(ranger PROPERTIES COMPILE_FLAGS "-DLIBRANGER_LIBRARY") 

INSTALL(TARGETS ranger LIBRARY DESTINATION lib ARCHIVE DESTINATION lib RUNTIME DESTINATION bin)
INSTALL(FILES ${LIBRANGERS_HEADERS} DESTINATION include)

IF(BUILD_TESTS)
    ADD_SUBDIRECTORY(tests)
ENDIF(BUILD_TESTS)
