IF(BUILD_RESOURCEVIEWER)
    ADD_SUBDIRECTORY(ResourceViewer)
ENDIF(BUILD_RESOURCEVIEWER)

IF(BUILD_RESOURCECONVERTER)
    ADD_SUBDIRECTORY(ResourceConverter)
ENDIF(BUILD_RESOURCECONVERTER)

IF(BUILD_NINEPATCHEDITOR)
    ADD_SUBDIRECTORY(NinePatchEditor)
ENDIF(BUILD_NINEPATCHEDITOR)

IF(BUILD_WORLDUTILS)
    ADD_SUBDIRECTORY(WorldUtils)
ENDIF(BUILD_WORLDUTILS)

IF(BUILD_PLANETVIEWER)
    ADD_SUBDIRECTORY(PlanetViewer)
ENDIF(BUILD_PLANETVIEWER)