IF(BUILD_RESOURCE_VIEWER)
    ADD_SUBDIRECTORY(ResourceViewer)
ENDIF(BUILD_RESOURCE_VIEWER)

IF(BUILD_RESOURCE_CONVERTER)
    ADD_SUBDIRECTORY(ResourceConverter)
ENDIF(BUILD_RESOURCE_CONVERTER)

IF(BUILD_NINEPATCH_EDITOR)
    ADD_SUBDIRECTORY(NinePatchEditor)
ENDIF(BUILD_NINEPATCH_EDITOR)

IF(BUILD_WORLD_UTILS)
    ADD_SUBDIRECTORY(WorldUtils)
ENDIF(BUILD_WORLD_UTILS)

IF(BUILD_PLANET_VIEWER)
    ADD_SUBDIRECTORY(PlanetViewer)
ENDIF(BUILD_PLANET_VIEWER)