IF(BUILD_RESOURCE_VIEWER)
    ADD_SUBDIRECTORY(ResourceViewer)
ENDIF(BUILD_RESOURCE_VIEWER)

IF(BUILD_PLANET_VIEWER)
    ADD_SUBDIRECTORY(PlanetViewer)
ENDIF(BUILD_PLANET_VIEWER)

IF(BUILD_QUEST_PLAYER)
    ADD_SUBDIRECTORY(QuestPlayer)
ENDIF(BUILD_QUEST_PLAYER)

IF(BUILD_DAT_TOOLS)
    ADD_SUBDIRECTORY(DATTools)
ENDIF(BUILD_DAT_TOOLS)
